--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" content="Sanna Rossängs portfolio. Sanna Rossäng är en junior front end-utvecklare som tidigare arbetat som journalist. " />
     <title>Sanna Rossäng - Portfolio</title>
 
     <!-- CSS only -->
